# html_codegen

./: .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  context7.json  core.py  index.html  main.py  pyproject.toml  renderer.py  requirements.txt
.serena/: project.yml
brython_scripts/: hello.py
docs/source/: api.rst  conf.py  index.rst
html_codegen/: __init__.py  core.py  exceptions.py  py.typed  renderer.py  tags.py
html_codegen/tags/: AGENTS.md  __init__.py  base_.py  document_.py  forms_.py  interactive_.py  lists_.py  media_.py  metadata_.py  semantic_.py  tables_.py  text_.py
src/: core.py  renderer.py  tags.py
tests/: test_core.py
typings/html_codegen/: renderer.pyi  tags.pyi
typings/html_codegen-stubs/: core.pyi  tags.pyi
web/styles/: main.css
