[project]
name = "html-codegen"
version = "0.1.0"
description = "Python библиотека для программной генерации HTML документов с поддержкой Brython"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
build-docs = "sphinx.cmd.build:main"

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120
target-version = ["py312"]

[dependency-groups]
dev = [
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["html_codegen*"]

[tool.setuptools.package-data]
html_codegen = ["py.typed"]
