[project]
name = "html-codegen"
version = "0.1.0"
description = "Python библиотека для программной генерации HTML документов с поддержкой Brython"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
build-docs = "sphinx.cmd.build:main"

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 2
use_parentheses = true
known_firstparty = ["html_codegen"]
skip_glob = [".venv/*", "__pycache__/*", "docs/build/*"]

[dependency-groups]
dev = [
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.10.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["html_codegen*"]

[tool.setuptools.package-data]
html_codegen = ["py.typed"]
